# hermes

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  hermes.toml  main.py  migration.toml  pyproject.toml
.github/workflows/: ci.yaml
example/: migration.toml
example/migration/0702465555f74b4890b9221dace42d11--create_users_table/: info.json  info.toml  upgrade.sql
example/migration/2665aa360bd442868dfe41305404bfa5--alter_orders_table/: downgrade.sql  info.json  info.toml  upgrade.sql
example/migration/4284e5e8753349608362f2e40af0da7e--create_orders_table/: info.json  info.toml  upgrade.sql
example/migration/4aca5f78faed48889b9bf078ac4b2cfb--alter_user_table/: downgrade.sql  info.json  info.toml  upgrade.sql
src/: env.py  logger.py  logging.py  main.py  migration_chain.py  schema.py  test_utils.py  utils.py
src/tests/: conftest.py  fixtures.py  test_migration_chain_unit.py  test_utils_integration.py  test_utils_unit.py
