[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asynch>=0.3.0",
    "cyclopts>=3.23.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
]


[tool.ruff.format]
preview = true

[tool.ruff]
line-length = 80


[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "podman-compose>=1.5.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
