[project]
name = "hermes"
version = "0.1.0"
description = "Maintain your click house migrations."
authors = [{ name = "Neeraj Lamsal", email = "neeraj@vertexcover.io" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asynch>=0.3.0",
    "cyclopts>=3.23.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
]
[project.scripts]
hermes = "main:app"

[tool.ruff.format]
preview = true

[tool.ruff]
line-length = 80


[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "podman-compose>=1.5.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "testcontainers[clickhouse]>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*",
  "LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migration/*",
	"types.py",
	"schema.py",
	"__init__.py",
	"logger.py",
	"env.py",
]
